# Brown_3601

./: .gitignore  README.md
Diagrams/: diagrams.drawio
HDL/: ADC.vhd  IR_decoder.vhd  MediaBox.vhd  README.md.txt  Speaker.vhd  brown_box.vhd  button_buffer.vhd  clk_tree.vhd  cmd_gen.vhd  global_types.vhd  memory_module.vhd  periph_controller.vhd  periph_driver.vhd  speaker_driver.vhd  spi_master.vhd  tx_buffer.vhd  volume_module.vhd
HDL/bitstream/: ir_decoder.bit
HDL/constraint/: IR_decoder.ucf  Nexysdpimref.ucf
HW/IR/: README.md
HW/IR/IR/: IR.ino
HW/IR/logs/: README.md
HW/Potentiometer/: README.md
HW/Potentiometer/Potentiometer_arduino/potentiometer/: potentiometer.ino
SW/: README.md  index.html  soundcloud.html  style.css  youtube.html
SW/ESP32_webserver/: ESP32_webserver.ino
SW/ESP32_webserver/data/: index.html  style.css
SW/HTTP_file_server/: ESP32_webserver.ino
SW/HTTP_file_server/data/: index.html  style.css
SW/SPI/SPI_master/: SPI_master.ino
SW/server/: CMakeLists.txt
SW/server/include/: brown_mqtt_client.h  brown_spi_slave.h  brown_webserver.h
SW/server/main/: CMakeLists.txt  brown_spi_slave.c  brown_webserver.c  main.c
SW/webserver/: CMakeLists.txt  Makefile  partitions_example.csv  sdkconfig.defaults
SW/webserver/include/: keep_alive.h  rest_server.h
SW/webserver/main/: CMakeLists.txt  brown_mqtt_client.c  brown_spi_slave.c  brown_webserver.c  keep_alive.c  main.c  rest_server.c  ws_server.c
